--- a/index.html
+++ b/index.html
@@ -300,45 +300,45 @@
     <section class="clients">
       <div class="container">
         <h2 class="title-clients">Постоянные клиенты</h2>
-        <ul> 
-          <li>
+        <ul class="clients-list"> 
+          <li class="clients-items">
             <a class="clients-link" href="#">
-              <svg class="clients-icons">
+              <svg class="clients-logo-1">
                 <use href="./images/sprite.svg#icon-logo-1"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="clients-items">
             <a class="clients-link" href="#">
-              <svg class="clients-icons">
+              <svg class="clients-logo-2">
                 <use href="./images/sprite.svg#icon-logo-2"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="clients-items">
             <a class="clients-link" href="#">
-              <svg class="clients-icons">
+              <svg class="clients-logo-3">
                 <use href="./images/sprite.svg#icon-logo-3"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="clients-items">
             <a class="clients-link" href="#">
-              <svg class="clients-icons">
+              <svg class="clients-logo-4">
                 <use href="./images/sprite.svg#icon-logo-4"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="clients-items">
             <a class="clients-link" href="#">
-              <svg class="clients-icons">
+              <svg class="clients-logo-5">
                 <use href="./images/sprite.svg#icon-logo-5"></use>
               </svg>
             </a>
           </li>
-          <li>
+          <li class="clients-items">
             <a class="clients-link" href="#">
-              <svg class="clients-icons">
+              <svg class="clients-logo-6">
                 <use href="./images/sprite.svg#icon-logo-6"></use>
               </svg>
             </a>
