--- a/index.html
+++ b/index.html
@@ -351,8 +351,11 @@
   </main>
   
   <footer class="futer-nav">
+   
 
     <div class="container">
+      <div class="footer-section">
+     <section class="footer-first">
 
     <div class="futer-logo">
     <a href="" class="futer-a">Web<span class="futer-span">Studio</span></a>
@@ -370,7 +373,49 @@
         <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
       </li>
     </ul>
-  </address>  
+  </address> 
+ </section>
+ <section class="footer-second">
+
+  <div footer-social>
+
+    <p class="footer-text">ПРИСОЕДИНЯЙТЕСЬ</p>
+
+  
+  <ul class="social-footer">
+    <li class="footer-items">
+      <a class="footer-link" href="#">
+        <svg class="footer-icons">
+          <use href="./images/sprite.svg#icon-instagram-2"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="footer-items">
+      <a class="footer-link" href="#">
+        <svg class="footer-icons">
+          <use href="./images/sprite.svg#icon-twitter-1"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="footer-items">
+      <a class="footer-link" href="#">
+        <svg class="footer-icons">
+          <use href="./images/sprite.svg#icon-facebook-1"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="footer-items">
+      <a class="footer-link" href="#">
+        <svg class="footer-icons">
+          <use href="./images/sprite.svg#icon-linkedin-1"></use>
+        </svg>
+      </a>
+    </li>
+  </ul>
+  </div>
+  </section>
+  </div>
+
 
     </div>
 
