--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <li>
         <a href="mailto:info@devstudio.com" class="link"> 
           <svg class="icon-envelop" >
-            <use href="./images/sprite.svg#icon-envelope-hover" width="16" height="12"></use>
+            <use href="./images/sprite.svg#icon-envelope-hover" ></use>
           </svg>
           info@devstudio.com</a>
       </li>
