--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
             <nav class="nav">
                 <a href="" class="nav-a">Web<span class="nav-span">Studio</span></a>
                 <ul class="site-nav list">
-                    <li class="item"><a href="" class="link">Студия</a></li>
-                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="item"><a href="" class="link">Портфолио</a></li>
                     <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>
     
@@ -30,7 +30,7 @@
                     <li>
                         <a href="mailto:info@devstudio.com" class="link">
                             <svg class="icon-envelop">
-                                <use href="./images/sprite.svg#icon-envelope-hover" width="16" height="12"></use>
+                                <use href="./images/sprite.svg#icon-envelope-hover"></use>
                             </svg>
                             info@devstudio.com</a>
                     </li>
@@ -86,7 +86,7 @@
             
             <ul class="card-set">
                 <li class="item-card">
-                    <article class="card-tumb">
+                    <article class="card">
                         <div class="card-tumb">
                     <img src="./images/img1.jpg" alt="ноутбук" width="370">
                         </div>
